--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>anywhere</title>
-  </head>
-  <body>
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+</head>
+
+<body>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
-  </body>
+</body>
+
 </html>
