--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>anywhere</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <style type="text/css" media="screen">
+
+@font-face {
+    font-family: "icomoon";
+    src:url('./fonts/icomoon.eot?');
+    src:url('./fonts/icomoon.eot?') format('embedded-opentype'),
+        url('./fonts/icomoon.woff?') format('woff'),
+        url('./fonts/icomoon.ttf?') format('truetype'),
+        url('./fonts/icomoon.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+    </style>
 </head>
 
 <body>
